fix: Overlapped layout for mobile

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ body, html {
 	.card {
 		display: block;
 		max-height: 450px;
+		width: 100%;
 	}
 
 	.card-contents {
